chang gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
 .bundle
-db/*.sqlite3
+db/*.sqlite3*
 log/*.log
-tmp/
-.sass-cache/
-log/*.log
-tmp/*
-tmp/**/*
-doc/api
-doc/app
-db/*.sqlite3
+*.log
+/tmp/
+doc/
 *.swp
 *~
+.project
 .DS_Store
-
